FileAccessExtension添加权限黑名单
Signed-off-by: zhangxiaoliang25 <zhangxiaoliang25@huawei.com>
Change-Id: I39d54ae081a921acf0dfcd52cfd6d98ddcfb9e7f

--- a/frameworks/native/ability/native/etc/extension_blocklist_config.json
+++ b/frameworks/native/ability/native/etc/extension_blocklist_config.json
@@ -8,7 +8,72 @@
             "multimedia.audio",
             "multimedia.media"
         ],
-        "FileAccessExtension": [],
+        "FileAccessExtension": [
+            "bluetooth",
+            "bluetoothManager",
+            "wifiManager",
+            "wifi",
+            "wifiManagerExt",
+            "wifiext",
+            "telephony.call",
+            "telephony.sim",
+            "telephony.sms",
+            "bundleState",
+            "bundle.defaultAppManager",
+            "bundle.installer",
+            "bundle.appControl",
+            "app.ability.appManager",
+            "app.ability.abilityManager",
+            "abilityAccessCtrl",
+            "app.ability.missionManager",
+            "application.appManager",
+            "application.abilityManager",
+            "application.missionManager",
+            "account.appAccount",
+            "account.distributedAccount",
+            "account.osAccount",
+            "userIAM.faceAuth",
+            "data.distributedData",
+            "data.distributedDataObject",
+            "data.distributedKVStore",
+            "data.rdb",
+            "data.relationalStore",
+            "enterprise.deviceInfo",
+            "enterprise.dateTimeManager",
+            "enterprise.adminManager",
+            "continuation.continuationManager",
+            "nfc.controller",
+            "nfc.cardEmulation",
+            "nfc.tag",
+            "connectedTag",
+            "distributedMissionManager",
+            "hidebug",
+            "update",
+            "resourceschedule.usageStatistics",
+            "screen",
+            "screenshot",
+            "wallpaper",
+            "inputMethod",
+            "multimodalInput.inputMonitor",
+            "geolocation",
+            "geoLocationManager",
+            "settings",
+            "notificationManager",
+            "notification",
+            "notificationSubscribe",
+            "privacyManager",
+            "power",
+            "window",
+            "reminderAgent",
+            "reminderAgentManager",
+            "accessibility.config",
+            "contact",
+            "hiSysEvent",
+            "sensor",
+            "deviceInfo",
+            "systemTime",
+            "vibrator"
+        ],
         "BackupExtension": [],
         "EnterpriseAdminExtension": [],
         "WindowExtensionExtension": [],
