add getProcessMemoryByPid and getRunningProcessInfoByBundlenName
Signed-off-by: shaoxianqiang <1018410944@qq.com>
Change-Id: Ifa70aa139075c0664f1132112a594ffcfbd7623a

--- a/services/appmgr/BUILD.gn
+++ b/services/appmgr/BUILD.gn
@@ -94,6 +94,7 @@ ohos_shared_library("libappms") {
     "safwk:system_ability_fwk",
     "samgr:samgr_proxy",
     "window_manager:libwsutils",
+    "memory_utils:libmeminfo",
   ]
 
   if (product_name != "ohcore") {
