--- a/test/unittest/ams_app_life_cycle_test/BUILD.gn
+++ b/test/unittest/ams_app_life_cycle_test/BUILD.gn
@@ -52,6 +52,7 @@ ohos_unittest("AmsAppLifeCycleTest") {
   deps = [
     "${ability_runtime_innerkits_path}/app_manager:app_manager",
     "${ability_runtime_innerkits_path}/uri_permission:uri_permission_mgr",
+    "${ability_runtime_services_path}/appmgr:libappms",
     "${ability_runtime_services_path}/common:perm_verification",
     "${ability_runtime_test_path}/unittest:appmgr_test_source",
     "${distributedschedule_path}/safwk/interfaces/innerkits/safwk:system_ability_fwk",
