--- a/test/unittest/app_mgr_service_event_handler_test/BUILD.gn
+++ b/test/unittest/app_mgr_service_event_handler_test/BUILD.gn
@@ -48,6 +48,7 @@ ohos_unittest("AMSEventHandlerTest") {
   deps = [
     "${ability_runtime_innerkits_path}/app_manager:app_manager",
     "${ability_runtime_innerkits_path}/uri_permission:uri_permission_mgr",
+    "${ability_runtime_services_path}/appmgr:libappms",
     "${ability_runtime_services_path}/common:event_report",
     "${ability_runtime_services_path}/common:perm_verification",
     "${ability_runtime_test_path}/unittest:appmgr_test_source",
