--- a/test/unittest/ams_recent_app_list_test/BUILD.gn
+++ b/test/unittest/ams_recent_app_list_test/BUILD.gn
@@ -51,7 +51,6 @@ ohos_unittest("AmsRecentAppListTest") {
   deps = [
     "${ability_runtime_innerkits_path}/app_manager:app_manager",
     "${ability_runtime_innerkits_path}/uri_permission:uri_permission_mgr",
-    "${ability_runtime_services_path}/appmgr:libappms",
     "${ability_runtime_services_path}/common:event_report",
     "${ability_runtime_services_path}/common:perm_verification",
     "${ability_runtime_test_path}/unittest:appmgr_test_source",
@@ -71,6 +70,7 @@ ohos_unittest("AmsRecentAppListTest") {
     "hitrace:hitrace_meter",
     "init:libbeget_proxy",
     "ipc:ipc_core",
+    "memory_utils:libmeminfo",
     "window_manager:libwm",
     "window_manager:libwsutils",
   ]
