--- a/test/unittest/BUILD.gn
+++ b/test/unittest/BUILD.gn
@@ -325,7 +325,10 @@ group("unittest") {
     "app_mgr_stub_test:unittest",
     "app_recovery_test:unittest",
     "app_running_processes_info_test:unittest",
+    "app_scheduler_host_test:unittest",
+    "app_scheduler_proxy_test:unittest",
     "app_scheduler_test:unittest",
+    "app_lifecycle_deal_test:unittest",
     "app_spawn_client_test:unittest",
     "app_spawn_socket_test:unittest",
     "app_state_observer_manager_test:unittest",
@@ -361,6 +364,7 @@ group("unittest") {
     "dummy_values_bucket_test:unittest",
     "event_report_test:unittest",
     "extension_config_mgr_test:unittest",
+    "fault_data:unittest",
     "file_path_utils_test:unittest",
     "form_extension_context_test:unittest",
     "frameworks_kits_ability_ability_runtime_test:unittest",
