--- a/test/moduletest/ability_manager_client_test/BUILD.gn
+++ b/test/moduletest/ability_manager_client_test/BUILD.gn
@@ -1,4 +1,4 @@
-# Copyright (c) 2022 Huawei Device Co., Ltd.
+# Copyright (c) 2022-2023 Huawei Device Co., Ltd.
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
@@ -18,6 +18,8 @@ module_output_path = "ability_runtime/mstabilitymgrservice"
 
 ohos_moduletest("ability_manager_client_test") {
   module_out_path = module_output_path
+
+  include_dirs = [ "${ability_runtime_test_path}/mock/frameworks_kits_ability_native_test/include" ]
 
   sources = [ "ability_manager_client_test.cpp" ]
 
