formExtension support connectAbility
Signed-off-by: HuangXW <huangxinwei4@huawei.com>
Change-Id: I918924f3c095c7c7e21c5b7db7250acaa000f830

--- a/frameworks/native/ability/native/BUILD.gn
+++ b/frameworks/native/ability/native/BUILD.gn
@@ -456,6 +456,7 @@ ohos_shared_library("form_extension") {
       "${ability_runtime_innerkits_path}/runtime:runtime",
       "${ability_runtime_napi_path}/inner/napi_common:napi_common",
       "${ability_runtime_native_path}/ability:ability_context_native",
+      "${ability_runtime_native_path}/ability/native:ability_business_error",
       "${ability_runtime_native_path}/appkit:app_context",
     ]
 
@@ -468,6 +469,7 @@ ohos_shared_library("form_extension") {
       "form_fwk:formutil_napi",
       "hilog:libhilog",
       "ipc:ipc_core",
+      "ipc:ipc_napi_common",
     ]
   }
   subsystem_name = "ability"
