--- a/services/abilitymgr/BUILD.gn
+++ b/services/abilitymgr/BUILD.gn
@@ -160,6 +160,7 @@ ohos_shared_library("abilityms") {
     "samgr:samgr_proxy",
     "window_manager:libwsutils",
     "window_manager:scene_session",
+    "window_manager:sms",
   ]
 
   if (background_task_mgr_continuous_task_enable) {
