--- a/test/moduletest/common/ams/specified_ability_service_test/BUILD.gn
+++ b/test/moduletest/common/ams/specified_ability_service_test/BUILD.gn
@@ -24,30 +24,24 @@ ohos_moduletest("specified_ability_service_test") {
     "//third_party/jsoncpp/include",
     "${ability_runtime_path}/interfaces/kits/native/ability/native/distributed_ability_runtime",
     "${ability_runtime_innerkits_path}/dataobs_manager/include",
+    "${ability_runtime_innerkits_path}/deps_wrapper/include",
   ]
 
   sources = [ "specified_ability_service_test.cpp" ]
   sources += [
     "${ability_runtime_services_path}/abilitymgr/src/ability_bundle_event_callback.cpp",
     "${ability_runtime_services_path}/abilitymgr/src/ability_event_util.cpp",
-    "${ability_runtime_services_path}/abilitymgr/src/ability_manager_service.cpp",
     "${ability_runtime_services_path}/abilitymgr/src/app_exit_reason_data_manager.cpp",
     "${ability_runtime_services_path}/abilitymgr/src/scene_board/ui_ability_lifecycle_manager.cpp",
     "${ability_runtime_services_path}/abilitymgr/src/start_ability_handler.cpp",
     "${ability_runtime_services_path}/abilitymgr/src/start_ability_handler/start_ability_sandbox_savefile.cpp",
     "${ability_runtime_services_path}/abilitymgr/src/window_focus_changed_listener.cpp",
-    "${ability_runtime_test_path}/mock/services_abilitymgr_test/libs/sa_mgr/src/sa_mgr_client_mock.cpp",
     "${ability_runtime_test_path}/moduletest/mock/src/mock_app_mgr_client.cpp",
     "${ability_runtime_test_path}/moduletest/mock/src/mock_bundle_mgr.cpp",
     "${device_manager_path}/test/unittest/mock/parameter.cpp",
   ]
 
-  configs = [
-    "${ability_runtime_test_path}/moduletest:aafwk_module_test_config",
-    "${ability_runtime_innerkits_path}/ability_manager:ability_manager_public_config",
-    "${ability_runtime_test_path}/mock/services_abilitymgr_test/libs/sa_mgr:sa_mgr_mock_config",
-    "${ability_runtime_innerkits_path}/app_manager:appmgr_sdk_config",
-  ]
+  configs = [ "${ability_runtime_innerkits_path}/ability_manager:ability_manager_public_config" ]
   cflags = []
   if (target_cpu == "arm") {
     cflags += [ "-DBINDER_IPC_32BIT" ]
@@ -61,8 +55,6 @@ ohos_moduletest("specified_ability_service_test") {
     "${ability_runtime_services_path}/common:event_report",
     "${ability_runtime_services_path}/common:perm_verification",
     "${ability_runtime_services_path}/common:task_handler_wrap",
-    "${distributedschedule_path}/safwk/interfaces/innerkits/safwk:system_ability_fwk",
-    "${distributedschedule_path}/samgr/interfaces/innerkits/samgr_proxy:samgr_proxy",
     "//third_party/googletest:gmock_main",
     "//third_party/googletest:gtest_main",
     "//third_party/icu/icu4c:shared_icuuc",
@@ -101,7 +93,10 @@ ohos_moduletest("specified_ability_service_test") {
     "relational_store:native_appdatafwk",
     "relational_store:native_dataability",
     "relational_store:native_rdb",
+    "safwk:system_ability_fwk",
+    "samgr:samgr_proxy",
     "window_manager:libwsutils",
+    "window_manager:sms",
   ]
 
   if (efficiency_manager) {
