--- a/test/moduletest/running_infos_module_test/BUILD.gn
+++ b/test/moduletest/running_infos_module_test/BUILD.gn
@@ -25,6 +25,7 @@ ohos_moduletest("running_infos_module_test") {
     "//third_party/jsoncpp/include",
     "${ability_runtime_path}/interfaces/kits/native/ability/native/distributed_ability_runtime",
     "${ability_runtime_innerkits_path}/dataobs_manager/include",
+    "${distributedschedule_path}/safwk/interfaces/innerkits/safwk",
   ]
 
   sources = [ "running_infos_module_test.cpp" ]
@@ -106,7 +107,9 @@ ohos_moduletest("running_infos_module_test") {
     "relational_store:native_appdatafwk",
     "relational_store:native_dataability",
     "relational_store:native_rdb",
+    "safwk:system_ability_fwk",
     "window_manager:libwsutils",
+    "window_manager:sms",
   ]
 
   if (efficiency_manager) {
