--- a/test/unittest/BUILD.gn
+++ b/test/unittest/BUILD.gn
@@ -162,8 +162,8 @@ ohos_source_set("abilityms_test_source") {
 
   include_dirs = [
     "${ability_base_kits_path}/extractortool/include",
-    "${ability_runtime_test_path}/mock/services_abilitymgr_test/libs/system_ability_mock",
     "${ability_runtime_test_path}/mock/services_abilitymgr_test/libs/appexecfwk_core",
+    "${distributedschedule_path}/safwk/interfaces/innerkits/safwk",
     "${distributedschedule_path}/samgr/interfaces/innerkits/samgr_proxy/include",
     "${ability_runtime_innerkits_path}/app_manager/include/appmgr",
     "${ability_runtime_path}/interfaces/kits/native/appkit/ability_runtime/context",
@@ -188,7 +188,6 @@ ohos_source_set("abilityms_test_source") {
     "${ability_runtime_innerkits_path}/uri_permission:uri_permission_mgr",
     "${ability_runtime_services_path}/abilitymgr:abilityms",
     "${ability_runtime_services_path}/common:task_handler_wrap",
-    "${ability_runtime_test_path}/mock/services_abilitymgr_test/libs/sa_mgr:sa_mgr_mock",
   ]
 
   external_deps = [
@@ -217,7 +216,9 @@ ohos_source_set("abilityms_test_source") {
     "relational_store:native_dataability",
     "relational_store:native_rdb",
     "resource_management:global_resmgr",
+    "safwk:system_ability_fwk",
     "window_manager:libwsutils",
+    "window_manager:sms",
   ]
 
   if (efficiency_manager) {
