--- a/frameworks/simulator/napi_module/ability_context/BUILD.gn
+++ b/frameworks/simulator/napi_module/ability_context/BUILD.gn
@@ -20,7 +20,7 @@ gen_js_src_binary("ability_context") {
   js_source = "${ability_runtime_napi_path}/ability_context/ability_context.js"
 }
 
-ohos_shared_library("ability_context_napi") {
+ohos_shared_library("abilitycontext_napi") {
   if (is_mingw) {
     defines = [ "WINDOWS_PLATFORM" ]
   } else {
@@ -36,6 +36,6 @@ ohos_shared_library("ability_context_napi") {
     ":gen_obj_src_ability_context_js",
   ]
   external_deps = [ "napi:ace_napi" ]
-  part_name = "simulator"
+  part_name = "ability_runtime"
   subsystem_name = "ability"
 }
