--- a/frameworks/simulator/napi_module/want_constant/BUILD.gn
+++ b/frameworks/simulator/napi_module/want_constant/BUILD.gn
@@ -15,22 +15,17 @@ import("//build/ohos.gni")
 import("//foundation/ability/ability_runtime/ability_runtime.gni")
 
 ohos_shared_library("wantconstant_napi") {
-  if (is_mingw) {
-    platform = "windows"
-  } else {
-    platform = "mac"
-  }
-
   sources = [
     "${ability_runtime_napi_path}/wantConstant/native_module.cpp",
     "${ability_runtime_napi_path}/wantConstant/want_constant.cpp",
   ]
 
-  deps = [
-    "${ability_runtime_path}/frameworks/simulator/osal:simulator_osal",
-    "${hilog_path}/interfaces/native/innerkits:libhilog_$platform",
+  deps = [ "${ability_runtime_path}/frameworks/simulator/osal:simulator_osal" ]
+
+  external_deps = [
+    "hilog:libhilog",
+    "napi:ace_napi",
   ]
-  external_deps = [ "napi:ace_napi" ]
-  part_name = "simulator"
+  part_name = "ability_runtime"
   subsystem_name = "ability"
 }
