--- a/ability_runtime.gni
+++ b/ability_runtime.gni
@@ -23,6 +23,7 @@ ability_runtime_test_path = "${ability_runtime_path}/test"
 ace_engine_path = "//foundation/arkui/ace_engine"
 arkui_path = "//foundation/arkui"
 previewer_path = "//ide/tools/previewer"
+simulator_path = "//foundation/ability/ability_runtime/frameworks/simulator"
 
 bundlefwk_path = "//foundation/bundlemanager/bundle_framework"
 bundlefwk_inner_api_path = "${bundlefwk_path}/interfaces/inner_api"
