--- a/frameworks/simulator/common/BUILD.gn
+++ b/frameworks/simulator/common/BUILD.gn
@@ -1,4 +1,4 @@
-# Copyright (c) 2022 Huawei Device Co., Ltd.
+# Copyright (c) 2023 Huawei Device Co., Ltd.
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
@@ -13,27 +13,33 @@
 
 import("//build/ohos.gni")
 import("//foundation/ability/ability_runtime/ability_runtime.gni")
-import(
-    "//foundation/ability/ability_runtime/frameworks/simulator/build/ability_simulator.gni")
 
-gen_js_src_binary("context") {
-  js_source = "${ability_runtime_napi_path}/app/context/context.js"
+config("ability_simulator_common_config") {
+  include_dirs = [
+    "${simulator_path}/common/include",
+    "${ability_runtime_services_path}/common/include",
+  ]
 }
 
-ohos_shared_library("context_napi") {
+ohos_shared_library("ability_simulator_common") {
   if (is_mingw) {
-    defines = [ "WINDOWS_PLATFORM" ]
-  } else {
-    defines = [ "MAC_PLATFORM" ]
+    defines = [
+      "WINDOWS_PLATFORM",
+      "NOGDI",
+    ]
   }
 
-  sources = [ "${ability_runtime_napi_path}/app/context/context_module.cpp" ]
+  cflags = [ "-std=c++17" ]
 
-  deps = [
-    ":gen_obj_src_context_abc",
-    ":gen_obj_src_context_js",
-  ]
-  external_deps = [ "napi:ace_napi" ]
+  include_dirs = [ "${ability_runtime_innerkits_path}/runtime/include" ]
+
+  sources = [ "src/configuration.cpp" ]
+
+  public_configs = [ ":ability_simulator_common_config" ]
+
+  deps = []
+
+  external_deps = [ "hilog:libhilog" ]
 
   part_name = "ability_runtime"
   subsystem_name = "ability"
