--- a/frameworks/simulator/napi_module/ability_constant/BUILD.gn
+++ b/frameworks/simulator/napi_module/ability_constant/BUILD.gn
@@ -15,12 +15,6 @@ import("//build/ohos.gni")
 import("//foundation/ability/ability_runtime/ability_runtime.gni")
 
 ohos_shared_library("abilityconstant_napi") {
-  if (is_mingw) {
-    platform = "windows"
-  } else {
-    platform = "mac"
-  }
-
   include_dirs = [
     "${ability_runtime_innerkits_path}/ability_manager/include",
     "${ability_runtime_innerkits_path}/ability_manager/include/continuation",
@@ -30,12 +24,13 @@ ohos_shared_library("abilityconstant_napi") {
     "${ability_runtime_napi_path}/ability_constant/ability_constant_module.cpp",
   ]
 
-  deps = [
-    "${ability_runtime_path}/frameworks/simulator/osal:simulator_osal",
-    "${hilog_path}/interfaces/native/innerkits:libhilog_$platform",
-  ]
-  external_deps = [ "napi:ace_napi" ]
+  deps = [ "${ability_runtime_path}/frameworks/simulator/osal:simulator_osal" ]
 
-  part_name = "simulator"
+  external_deps = [
+    "hilog:libhilog",
+    "napi:ace_napi",
+  ]
+
+  part_name = "ability_runtime"
   subsystem_name = "ability"
 }
