--- a/interfaces/inner_api/ability_manager/BUILD.gn
+++ b/interfaces/inner_api/ability_manager/BUILD.gn
@@ -126,6 +126,8 @@ ohos_shared_library("ability_manager") {
     "relational_store:native_dataability",
     "relational_store:native_rdb",
     "samgr:samgr_proxy",
+    "window_manager:libwsutils",
+    "window_manager:session_manager",
   ]
 
   if (ability_runtime_graphics) {
