Resolve compilation issues
Signed-off-by: xinking129 <xinxin13@huawei.com>

--- a/frameworks/simulator/napi_module/ability_constant/BUILD.gn
+++ b/frameworks/simulator/napi_module/ability_constant/BUILD.gn
@@ -20,9 +20,7 @@ ohos_shared_library("abilityconstant_napi") {
     "${ability_runtime_innerkits_path}/ability_manager/include/continuation",
   ]
 
-  sources = [
-    "${ability_runtime_napi_path}/ability_constant/ability_constant_module.cpp",
-  ]
+  sources = [ "ability_constant_module.cpp" ]
 
   deps = [ "${ability_runtime_path}/frameworks/simulator/osal:simulator_osal" ]
 
