--- a/frameworks/simulator/ability_simulator/BUILD.gn
+++ b/frameworks/simulator/ability_simulator/BUILD.gn
@@ -1,4 +1,4 @@
-# Copyright (c) 2022 Huawei Device Co., Ltd.
+# Copyright (c) 2022-2023 Huawei Device Co., Ltd.
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
@@ -111,6 +111,7 @@ ohos_shared_library("ability_simulator") {
     }
   }
 
+  innerapi_tags = [ "platformsdk" ]
   part_name = "ability_runtime"
   subsystem_name = "ability"
 }
