change dm register time
Signed-off-by: yuwenze <yuwenze1@huawei.com>
Change-Id: Ibec50b6bc4d384cd4d16eb161e7d6828980614b5

--- a/frameworks/native/ability/native/BUILD.gn
+++ b/frameworks/native/ability/native/BUILD.gn
@@ -536,6 +536,8 @@ ohos_shared_library("service_extension") {
     "ipc:ipc_core",
     "ipc:ipc_napi_common",
     "napi:ace_napi",
+    "safwk:system_ability_fwk",
+    "samgr:samgr_proxy",
   ]
 
   if (ability_runtime_graphics) {
