Preference supports inter process data subscription
Signed-off-by: changjiaxing <changjiaxing2@huawei.com>
Change-Id: I5683d7f87a69464e86a2e37f8370f9156a973933

--- a/test/unittest/BUILD.gn
+++ b/test/unittest/BUILD.gn
@@ -361,6 +361,7 @@ group("unittest") {
     "data_ability_record_test:unittest",
     "dataobs_mgr_client_test:unittest",
     "dataobs_mgr_inner_ext_test:unittest",
+    "dataobs_mgr_inner_pref_test:unittest",
     "dataobs_mgr_inner_test:unittest",
     "dataobs_mgr_proxy_test:unittest",
     "dataobs_mgr_service_dump_test:unittest",
