--- a/services/dataobsmgr/dataobsms.gni
+++ b/services/dataobsmgr/dataobsms.gni
@@ -17,6 +17,7 @@ dataobsms_files = [
   "src/dataobs_mgr_changeinfo.cpp",
   "src/dataobs_mgr_inner.cpp",
   "src/dataobs_mgr_inner_ext.cpp",
+  "src/dataobs_mgr_inner_pref.cpp",
   "src/dataobs_mgr_proxy.cpp",
   "src/dataobs_mgr_stub.cpp",
   "src/dataobs_mgr_service.cpp",
