add ut and fuzz for setMissionContinueState
Signed-off-by: z00838083 <zhuhuixuan@huawei.com>

--- a/test/fuzztest/BUILD.gn
+++ b/test/fuzztest/BUILD.gn
@@ -160,6 +160,7 @@ group("fuzztest") {
     "sendanrprocessid_fuzzer:fuzztest",
     "sendresulttoability_fuzzer:fuzztest",
     "setabilitycontroller_fuzzer:fuzztest",
+    "setmissioncontinuestate_fuzzer:fuzztest",
     "setmissionicon_fuzzer:fuzztest",
     "setmissionlabel_fuzzer:fuzztest",
     "startability_fuzzer:fuzztest",
