--- a/test/unittest/js_service_extension_test/BUILD.gn
+++ b/test/unittest/js_service_extension_test/BUILD.gn
@@ -61,7 +61,7 @@ ohos_unittest("js_service_extension_test") {
 
   if (ability_runtime_graphics) {
     external_deps += [
-      "multimedia_image_framework:image",
+      "image_framework:image",
       "window_manager:libdm",
       "window_manager:libwm",
     ]
