appfreeze to ams
Signed-off-by: mgceshuang <mashuang13@huawei.com>

--- a/hisysevent.yaml
+++ b/hisysevent.yaml
@@ -20,6 +20,16 @@ LIFECYCLE_TIMEOUT:
   PACKAGE_NAME: {type: STRING, desc: package name}
   PROCESS_NAME: {type: STRING, desc: process name}
   MSG: {type: STRING, desc: application event message}
+  STACK: {type: STRING, desc: main thread stacktrace}
+
+LIFECYCLE_HALF_TIMEOUT:
+  __BASE: {type: FAULT, level: CRITICAL, tag: STABILITY, desc: ability timeout}
+  PID: {type: INT32, desc: process id}
+  UID: {type: INT32, desc: app uid}
+  PACKAGE_NAME: {type: STRING, desc: package name}
+  PROCESS_NAME: {type: STRING, desc: process name}
+  MSG: {type: STRING, desc: application event message}
+  STACK: {type: STRING, desc: main thread stacktrace}
 
 APP_LIFECYCLE_TIMEOUT:
   __BASE: {type: FAULT, level: CRITICAL, tag: STABILITY, desc: application timeout}
@@ -57,6 +67,14 @@ THREAD_BLOCK_6S:
   MSG: {type: STRING, desc: application event message}
   STACK: {type: STRING, desc: main thread stacktrace}
 
+APP_INPUT_BLOCK:
+  __BASE: {type: FAULT, level: CRITICAL, tag: STABILITY, desc: application freeze}
+  PID: {type: INT32, desc: process id}
+  UID: {type: INT32, desc: app uid}
+  PACKAGE_NAME: {type: STRING, desc: package name}
+  PROCESS_NAME: {type: STRING, desc: process name}
+  MSG: {type: STRING, desc: application event message}
+  STACK: {type: STRING, desc: main thread stacktrace}
 # fault event
 
 START_ABILITY_ERROR:
