--- a/interfaces/inner_api/app_manager/BUILD.gn
+++ b/interfaces/inner_api/app_manager/BUILD.gn
@@ -68,6 +68,7 @@ ohos_shared_library("app_manager") {
     "src/appmgr/app_state_callback_proxy.cpp",
     "src/appmgr/app_state_data.cpp",
     "src/appmgr/app_task_info.cpp",
+    "src/appmgr/appfreeze_manager.cpp",
     "src/appmgr/application_state_observer_proxy.cpp",
     "src/appmgr/application_state_observer_stub.cpp",
     "src/appmgr/component_interception_proxy.cpp",
@@ -107,8 +108,13 @@ ohos_shared_library("app_manager") {
     "ability_base:want",
     "bundle_framework:appexecfwk_base",
     "c_utils:utils",
+    "faultloggerd:libdfx_dumpcatcher",
+    "faultloggerd:libfaultloggerd",
+    "ffrt:libffrt",
     "hilog:libhilog",
+    "hisysevent:libhisysevent",
     "hitrace:hitrace_meter",
+    "init:libbegetutil",
     "ipc:ipc_core",
     "samgr:samgr_proxy",
   ]
