Signed-off-by: zhoushicheng <zhoushicheng2@huawei.com> Change-Id: I7577e760564619c375d1d7fc09b20ef5f9f3de34
Change-Id: Ib375c1bf90196e1d00b3ff901487cff8e81b1036

--- a/test/unittest/frameworks_kits_ability_native_test/BUILD.gn
+++ b/test/unittest/frameworks_kits_ability_native_test/BUILD.gn
@@ -115,6 +115,7 @@ ohos_unittest("ability_test") {
     "bundle_framework:appexecfwk_base",
     "c_utils:utils",
     "common_event_service:cesfwk_innerkits",
+    "eventhandler:libeventhandler",
     "ffrt:libffrt",
     "hilog:libhilog",
     "hitrace:hitrace_meter",
@@ -295,6 +296,7 @@ ohos_unittest("page_ability_impl_test") {
       "bundle_framework:appexecfwk_base",
       "c_utils:utils",
       "common_event_service:cesfwk_innerkits",
+      "eventhandler:libeventhandler",
       "hilog:libhilog",
       "hitrace:hitrace_meter",
       "input:libmmi-client",
@@ -328,6 +330,7 @@ ohos_unittest("service_ability_impl_test") {
     "bundle_framework:appexecfwk_base",
     "c_utils:utils",
     "common_event_service:cesfwk_innerkits",
+    "eventhandler:libeventhandler",
     "hilog:libhilog",
     "hitrace:hitrace_meter",
     "ipc:ipc_core",
@@ -1504,6 +1507,7 @@ ohos_unittest("new_ability_impl_test") {
       "bundle_framework:appexecfwk_base",
       "c_utils:utils",
       "common_event_service:cesfwk_innerkits",
+      "eventhandler:libeventhandler",
       "hilog:libhilog",
       "hitrace:hitrace_meter",
       "input:libmmi-client",
@@ -1801,6 +1805,7 @@ ohos_unittest("ability_local_record_test") {
     "bundle_framework:appexecfwk_base",
     "c_utils:utils",
     "common_event_service:cesfwk_innerkits",
+    "eventhandler:libeventhandler",
     "hilog:libhilog",
     "hitrace:hitrace_meter",
     "ipc:ipc_core",
