--- a/test/unittest/frameworks_kits_appkit_native_test/BUILD.gn
+++ b/test/unittest/frameworks_kits_appkit_native_test/BUILD.gn
@@ -1,4 +1,4 @@
-# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
+# Copyright (c) 2021-2023 Huawei Device Co., Ltd.
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
@@ -351,6 +351,7 @@ ohos_unittest("mix_stack_dumper_test") {
     "ability_runtime:abilitykit_native",
     "ability_runtime:runtime",
     "common_event_service:cesfwk_innerkits",
+    "eventhandler:libeventhandler",
     "faultloggerd:libbacktrace_local",
   ]
 }
