new feature for broker
Signed-off-by: du-zhihai <duzhihai@huawei.com>
Change-Id: Ia91c688f7bbda5da5789b2c6500ebb89493f7324

--- a/test/unittest/BUILD.gn
+++ b/test/unittest/BUILD.gn
@@ -109,6 +109,7 @@ ohos_source_set("abilityms_test_source") {
     "${ability_runtime_services_path}/abilitymgr/src/ability_event_util.cpp",
     "${ability_runtime_services_path}/abilitymgr/src/ability_interceptor.cpp",
     "${ability_runtime_services_path}/abilitymgr/src/ability_interceptor_executer.cpp",
+    "${ability_runtime_services_path}/abilitymgr/src/ability_manager_collaborator_proxy.cpp",
     "${ability_runtime_services_path}/abilitymgr/src/ability_manager_proxy.cpp",
     "${ability_runtime_services_path}/abilitymgr/src/ability_manager_service.cpp",
     "${ability_runtime_services_path}/abilitymgr/src/ability_manager_stub.cpp",
