--- a/services/abilitymgr/abilitymgr.gni
+++ b/services/abilitymgr/abilitymgr.gni
@@ -22,6 +22,7 @@ abilityms_files = [
   "src/ability_manager_stub.cpp",
   "src/ability_manager_proxy.cpp",
   "src/ability_record.cpp",
+  "src/ability_manager_collaborator_proxy.cpp",
   "src/ability_scheduler_stub.cpp",
   "src/ability_scheduler_proxy.cpp",
   "src/ability_token_stub.cpp",
