--- a/frameworks/native/ability/native/BUILD.gn
+++ b/frameworks/native/ability/native/BUILD.gn
@@ -311,14 +311,12 @@ ohos_shared_library("abilitykit_native") {
       "ability_base:session_info",
       "form_fwk:form_manager",
       "image_framework:image",
+      "image_framework:image",
+      "image_framework:image_native",
       "input:libmmi-client",
+      "window_manager:libdm",
+      "window_manager:libwm",
       "window_manager:windowstage_kit",
-    ]
-
-    public_deps += [
-      "${multimedia_path}/interfaces/innerkits:image_native",
-      "${windowmanager_path}/dm:libdm",
-      "${windowmanager_path}/wm:libwm",
     ]
   }
 
@@ -429,6 +427,10 @@ ohos_shared_library("ability_thread") {
     "ipc:ipc_core",
     "napi:ace_napi",
   ]
+
+  if (ability_runtime_graphics) {
+    external_deps += [ "window_manager:libwm" ]
+  }
 
   innerapi_tags = [ "platformsdk_indirect" ]
   subsystem_name = "ability"
@@ -788,6 +790,10 @@ ohos_shared_library("ui_extension") {
     "ipc:ipc_napi_common",
     "napi:ace_napi",
   ]
+
+  if (ability_runtime_graphics) {
+    external_deps += [ "window_manager:libwm" ]
+  }
 
   subsystem_name = "ability"
   part_name = "ability_runtime"
