--- a/frameworks/native/appkit/BUILD.gn
+++ b/frameworks/native/appkit/BUILD.gn
@@ -166,7 +166,10 @@ ohos_shared_library("appkit_native") {
 
   if (ability_runtime_graphics) {
     deps += [ "//third_party/icu/icu4c:shared_icuuc" ]
-    external_deps += [ "i18n:intl_util" ]
+    external_deps += [
+      "i18n:intl_util",
+      "window_manager:libwm",
+    ]
   }
 
   defines = []
