--- a/test/fuzztest/abilitymanagerfifth_fuzzer/BUILD.gn
+++ b/test/fuzztest/abilitymanagerfifth_fuzzer/BUILD.gn
@@ -49,6 +49,7 @@ ohos_fuzztest("AbilityManagerFifthFuzzTest") {
     "c_utils:utils",
     "common_event_service:cesfwk_innerkits",
     "ffrt:libffrt",
+    "hilog:libhilog",
     "ipc:ipc_core",
     "napi:ace_napi",
     "safwk:system_ability_fwk",
@@ -56,7 +57,10 @@ ohos_fuzztest("AbilityManagerFifthFuzzTest") {
   ]
 
   if (ability_runtime_graphics) {
-    external_deps += [ "input:libmmi-client" ]
+    external_deps += [
+      "input:libmmi-client",
+      "window_manager:libwm",
+    ]
   }
 
   if (ecologic_rule_enabled) {
