--- a/test/fuzztest/abilitymanagerservicefirst_fuzzer/BUILD.gn
+++ b/test/fuzztest/abilitymanagerservicefirst_fuzzer/BUILD.gn
@@ -1,4 +1,4 @@
-# Copyright (c) 2022 Huawei Device Co., Ltd.
+# Copyright (c) 2022-2023 Huawei Device Co., Ltd.
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
@@ -51,6 +51,7 @@ ohos_fuzztest("AbilityManagerServiceFirstFuzzTest") {
   ]
 
   external_deps = [
+    "ability_base:session_info",
     "ability_base:want",
     "ability_base:zuri",
     "bundle_framework:appexecfwk_base",
@@ -58,6 +59,7 @@ ohos_fuzztest("AbilityManagerServiceFirstFuzzTest") {
     "common_event_service:cesfwk_core",
     "common_event_service:cesfwk_innerkits",
     "ffrt:libffrt",
+    "hilog:libhilog",
     "ipc:ipc_core",
     "napi:ace_napi",
     "relational_store:native_dataability",
