--- a/test/fuzztest/missionlistmanagersecond_fuzzer/BUILD.gn
+++ b/test/fuzztest/missionlistmanagersecond_fuzzer/BUILD.gn
@@ -1,4 +1,4 @@
-# Copyright (c) 2022 Huawei Device Co., Ltd.
+# Copyright (c) 2022-2023 Huawei Device Co., Ltd.
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
@@ -72,6 +72,7 @@ ohos_fuzztest("MissionListManagerSecondFuzzTest") {
     deps += []
     external_deps += [
       "i18n:intl_util",
+      "image_framework:image_native",
       "window_manager:libwm",
     ]
   }
