--- a/test/unittest/ability_record_test/BUILD.gn
+++ b/test/unittest/ability_record_test/BUILD.gn
@@ -73,6 +73,10 @@ ohos_unittest("ability_record_test") {
   if (background_task_mgr_continuous_task_enable) {
     external_deps += [ "background_task_mgr:bgtaskmgr_innerkits" ]
   }
+
+  if (ability_runtime_graphics) {
+    external_deps += [ "image_framework:image_native" ]
+  }
 }
 
 ohos_unittest("ability_record_test_call") {
@@ -130,6 +134,10 @@ ohos_unittest("ability_record_test_call") {
 
   if (ecologic_rule_enabled) {
     external_deps += [ "ecological_rule_mgr:erms_client" ]
+  }
+
+  if (ability_runtime_graphics) {
+    external_deps += [ "window_manager:libwm" ]
   }
 }
 
