--- a/test/unittest/ability_service_extension_test/BUILD.gn
+++ b/test/unittest/ability_service_extension_test/BUILD.gn
@@ -64,6 +64,10 @@ ohos_unittest("ability_service_extension_test") {
     "ipc:ipc_core",
     "napi:ace_napi",
   ]
+
+  if (ability_runtime_graphics) {
+    external_deps += [ "window_manager:libwm" ]
+  }
 }
 
 group("unittest") {
