--- a/test/unittest/ability_timeout_test/BUILD.gn
+++ b/test/unittest/ability_timeout_test/BUILD.gn
@@ -1,4 +1,4 @@
-# Copyright (c) 2022 Huawei Device Co., Ltd.
+# Copyright (c) 2022-2023 Huawei Device Co., Ltd.
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
@@ -51,6 +51,10 @@ ohos_unittest("ability_timeout_test") {
 
   if (ecologic_rule_enabled) {
     external_deps += [ "ecological_rule_mgr:erms_client" ]
+  }
+
+  if (ability_runtime_graphics) {
+    external_deps += [ "window_manager:libwm" ]
   }
 }
 
