--- a/test/unittest/call_record_test/BUILD.gn
+++ b/test/unittest/call_record_test/BUILD.gn
@@ -50,6 +50,7 @@ ohos_unittest("call_record_test") {
   external_deps = [
     "ability_base:want",
     "ffrt:libffrt",
+    "hilog:libhilog",
     "napi:ace_napi",
   ]
 
