--- a/test/unittest/data_ability_manager_test/BUILD.gn
+++ b/test/unittest/data_ability_manager_test/BUILD.gn
@@ -75,6 +75,10 @@ ohos_unittest("data_ability_manager_test") {
   if (ecologic_rule_enabled) {
     external_deps += [ "ecological_rule_mgr:erms_client" ]
   }
+
+  if (ability_runtime_graphics) {
+    external_deps += [ "window_manager:libwm" ]
+  }
 }
 
 group("unittest") {
