--- a/test/unittest/frameworks_kits_appkit_native_test/BUILD.gn
+++ b/test/unittest/frameworks_kits_appkit_native_test/BUILD.gn
@@ -131,6 +131,10 @@ ohos_unittest("application_test") {
     "napi:ace_napi",
     "resource_management:global_resmgr",
   ]
+
+  if (ability_runtime_graphics) {
+    external_deps += [ "window_manager:libwm" ]
+  }
 }
 
 ohos_unittest("context_container_test") {
@@ -170,6 +174,10 @@ ohos_unittest("context_container_test") {
     "ipc:ipc_core",
     "napi:ace_napi",
   ]
+
+  if (ability_runtime_graphics) {
+    external_deps += [ "window_manager:libwm" ]
+  }
 }
 
 ohos_unittest("context_deal_test") {
@@ -217,6 +225,10 @@ ohos_unittest("context_deal_test") {
     "napi:ace_napi",
     "resource_management:global_resmgr",
   ]
+
+  if (ability_runtime_graphics) {
+    external_deps += [ "window_manager:libwm" ]
+  }
 }
 
 ohos_unittest("application_impl_test") {
@@ -262,6 +274,10 @@ ohos_unittest("application_impl_test") {
     "ipc:ipc_core",
     "napi:ace_napi",
   ]
+
+  if (ability_runtime_graphics) {
+    external_deps += [ "window_manager:libwm" ]
+  }
 }
 
 config("ability_start_setting_config") {
@@ -358,6 +374,7 @@ ohos_unittest("mix_stack_dumper_test") {
     "common_event_service:cesfwk_innerkits",
     "eventhandler:libeventhandler",
     "faultloggerd:libbacktrace_local",
+    "hilog:libhilog",
     "napi:ace_napi",
   ]
 }
@@ -406,6 +423,10 @@ ohos_unittest("ability_stage_test") {
     "napi:ace_napi",
     "resource_management:global_resmgr",
   ]
+
+  if (ability_runtime_graphics) {
+    external_deps += [ "window_manager:libwm" ]
+  }
 }
 
 ohos_unittest("form_extension_context_test") {
@@ -444,6 +465,10 @@ ohos_unittest("form_extension_context_test") {
     "ipc:ipc_core",
     "napi:ace_napi",
   ]
+
+  if (ability_runtime_graphics) {
+    external_deps += [ "window_manager:libwm" ]
+  }
 }
 
 ###############################################################################
