--- a/test/unittest/free_install_manager_test/BUILD.gn
+++ b/test/unittest/free_install_manager_test/BUILD.gn
@@ -51,6 +51,10 @@ ohos_unittest("free_install_manager_test") {
   if (ecologic_rule_enabled) {
     external_deps += [ "ecological_rule_mgr:erms_client" ]
   }
+
+  if (ability_runtime_graphics) {
+    external_deps += [ "window_manager:libwm" ]
+  }
 }
 
 group("unittest") {
