--- a/test/unittest/pending_want_record_test/BUILD.gn
+++ b/test/unittest/pending_want_record_test/BUILD.gn
@@ -70,6 +70,10 @@ ohos_unittest("pending_want_record_test") {
   if (ecologic_rule_enabled) {
     external_deps += [ "ecological_rule_mgr:erms_client" ]
   }
+
+  if (ability_runtime_graphics) {
+    external_deps += [ "window_manager:libwm" ]
+  }
 }
 
 group("unittest") {
