--- a/test/unittest/resident_process_manager_test/BUILD.gn
+++ b/test/unittest/resident_process_manager_test/BUILD.gn
@@ -69,6 +69,10 @@ ohos_unittest("resident_process_manager_test") {
   if (ecologic_rule_enabled) {
     external_deps += [ "ecological_rule_mgr:erms_client" ]
   }
+
+  if (ability_runtime_graphics) {
+    external_deps += [ "window_manager:libwm" ]
+  }
 }
 
 group("unittest") {
