--- a/test/unittest/running_infos_test/BUILD.gn
+++ b/test/unittest/running_infos_test/BUILD.gn
@@ -52,6 +52,10 @@ ohos_unittest("running_infos_test") {
   if (ecologic_rule_enabled) {
     external_deps += [ "ecological_rule_mgr:erms_client" ]
   }
+
+  if (ability_runtime_graphics) {
+    external_deps += [ "window_manager:libwm" ]
+  }
 }
 
 group("unittest") {
