--- a/ability_runtime.gni
+++ b/ability_runtime.gni
@@ -138,4 +138,11 @@ declare_args() {
   } else {
     accessibility_enable = false
   }
+
+  if (!defined(global_parts_info) ||
+      defined(global_parts_info.bundlemanager_ecological_rule_mgr)) {
+    ecologic_rule_enabled = true
+  } else {
+    ecologic_rule_enabled = false
+  }
 }
