--- a/services/abilitymgr/BUILD.gn
+++ b/services/abilitymgr/BUILD.gn
@@ -104,7 +104,7 @@ config("abilityms_config") {
     defines += [ "SUPPORT_ASAN" ]
   }
 
-  if (ecologic_rule_mgr_enabled) {
+  if (ecologic_rule_enabled) {
     defines += [ "SUPPORT_ERMS" ]
   }
 
@@ -200,7 +200,7 @@ ohos_shared_library("abilityms") {
     ]
   }
 
-  if (ecologic_rule_mgr_enabled) {
+  if (ecologic_rule_enabled) {
     external_deps += [ "ecological_rule_mgr:erms_client" ]
   }
 
