--- a/frameworks/simulator/BUILD.gn
+++ b/frameworks/simulator/BUILD.gn
@@ -49,8 +49,7 @@ ohos_copy("ability_simulator_copy_application_modules") {
     "napi_module/ability:ability_napi",
     "napi_module/ability_constant:abilityconstant_napi",
     "napi_module/ability_context:abilitycontext_napi",
-    "napi_module/ability_stage:ability_stage_napi",
-    "napi_module/ability_stage_context:ability_stage_context_napi",
+    "napi_module/ability_stage_context:abilitystagecontext_napi",
     "napi_module/application_context:applicationcontext_napi",
     "napi_module/caller:caller_napi",
     "napi_module/callee:callee",
@@ -75,7 +74,10 @@ ohos_copy("ability_simulator_copy_app_ability_modules") {
   deps = []
   sources = []
 
-  napi_modules = [ "napi_module/uiability:uiability" ]
+  napi_modules = [
+    "napi_module/uiability:uiability",
+    "napi_module/ability_stage:abilitystage",
+  ]
 
   foreach(module, napi_modules) {
     deps += [ module ]
