Description:Use common_func instead of self-fulfillment. Sig:SIG_ApplicationFramework Feature or BugFix: Feature Binary Source: No
Signed-off-by: zhangyafei.echo <zhangyafei12@huawei.com>
Change-Id: I4b922f9f790c6bc974f53c39fd4285b21929d2b2

--- a/interfaces/inner_api/runtime/BUILD.gn
+++ b/interfaces/inner_api/runtime/BUILD.gn
@@ -45,7 +45,10 @@ config("runtime_all_deps_config") {
 }
 
 ohos_shared_library("runtime") {
-  include_dirs = [ "${ability_runtime_path}/services/abilitymgr/include" ]
+  include_dirs = [
+    "${ability_runtime_path}/services/abilitymgr/include",
+    "${bundlefwk_path}/interfaces/kits/js/common",
+  ]
 
   sources = [
     "${ability_runtime_native_path}/runtime/connect_server_manager.cpp",
@@ -88,6 +91,7 @@ ohos_shared_library("runtime") {
     "access_token:libaccesstoken_sdk",
     "bundle_framework:appexecfwk_base",
     "bundle_framework:appexecfwk_core",
+    "bundle_framework:bundle_napi_common",
     "c_utils:utils",
     "ets_runtime:libark_jsruntime",
     "ets_utils:console",
