--- a/test/fuzztest/BUILD.gn
+++ b/test/fuzztest/BUILD.gn
@@ -38,11 +38,15 @@ group("fuzztest") {
     "abilitymanagerserviceninth_fuzzer:fuzztest",
 
     # "abilitymanagerservicesecond_fuzzer:fuzztest",
-    "abilitymanager_fuzzer:fuzztest",
+    "abilitymanagerfifth_fuzzer:fuzztest",
+    "abilitymanagerfirst_fuzzer:fuzztest",
+    "abilitymanagerfourth_fuzzer:fuzztest",
+    "abilitymanagersecond_fuzzer:fuzztest",
     "abilitymanagerserviceseventh_fuzzer:fuzztest",
     "abilitymanagerservicesixth_fuzzer:fuzztest",
     "abilitymanagerservicetenth_fuzzer:fuzztest",
     "abilitymanagerservicethird_fuzzer:fuzztest",
+    "abilitymanagerthird_fuzzer:fuzztest",
     "abilitymgrrest_fuzzer:fuzztest",
     "abilityrunningrecord_fuzzer:fuzztest",
     "appstateobservermanager_fuzzer:fuzztest",
