--- a/test/fuzztest/abilitymanagerservicec_fuzzer/BUILD.gn
+++ b/test/fuzztest/abilitymanagerservicec_fuzzer/BUILD.gn
@@ -71,6 +71,10 @@ ohos_fuzztest("AbilityManagerServiceCFuzzTest") {
       "window_manager:libwm",
     ]
   }
+
+  if (ecologic_rule_enabled) {
+    external_deps += [ "ecological_rule_mgr:erms_client" ]
+  }
 }
 
 ###############################################################################
