--- a/test/fuzztest/abilitymanagerserviceseventh_fuzzer/BUILD.gn
+++ b/test/fuzztest/abilitymanagerserviceseventh_fuzzer/BUILD.gn
@@ -70,6 +70,10 @@ ohos_fuzztest("AbilityManagerServiceSeventhFuzzTest") {
       "window_manager:libwm",
     ]
   }
+
+  if (ecologic_rule_enabled) {
+    external_deps += [ "ecological_rule_mgr:erms_client" ]
+  }
 }
 
 ###############################################################################
