--- a/test/moduletest/ability_test/BUILD.gn
+++ b/test/moduletest/ability_test/BUILD.gn
@@ -90,6 +90,10 @@ ohos_moduletest("ability_moduletest") {
     deps += [ "${multimedia_path}/interfaces/innerkits:image_native" ]
     external_deps += [ "input:libmmi-client" ]
   }
+
+  if (ecologic_rule_enabled) {
+    external_deps += [ "ecological_rule_mgr:erms_client" ]
+  }
 }
 
 ohos_moduletest("ability_conetxt_test") {
@@ -141,6 +145,10 @@ ohos_moduletest("ability_conetxt_test") {
   ]
   if (ability_runtime_graphics) {
     external_deps += [ "input:libmmi-client" ]
+  }
+
+  if (ecologic_rule_enabled) {
+    external_deps += [ "ecological_rule_mgr:erms_client" ]
   }
 }
 
@@ -221,6 +229,10 @@ ohos_moduletest("data_ability_operation_moduletest") {
     deps += [ "${multimedia_path}/interfaces/innerkits:image_native" ]
     external_deps += [ "input:libmmi-client" ]
   }
+
+  if (ecologic_rule_enabled) {
+    external_deps += [ "ecological_rule_mgr:erms_client" ]
+  }
 }
 
 ohos_moduletest("data_ability_helper_module_test") {
@@ -270,6 +282,10 @@ ohos_moduletest("data_ability_helper_module_test") {
   if (ability_runtime_graphics) {
     external_deps += [ "input:libmmi-client" ]
   }
+
+  if (ecologic_rule_enabled) {
+    external_deps += [ "ecological_rule_mgr:erms_client" ]
+  }
 }
 
 ohos_moduletest("ability_post_event_timeout_test") {
@@ -315,6 +331,10 @@ ohos_moduletest("ability_post_event_timeout_test") {
 
   if (ability_runtime_graphics) {
     external_deps += [ "input:libmmi-client" ]
+  }
+
+  if (ecologic_rule_enabled) {
+    external_deps += [ "ecological_rule_mgr:erms_client" ]
   }
 }
 
