--- a/test/moduletest/common/ams/specified_ability_service_test/BUILD.gn
+++ b/test/moduletest/common/ams/specified_ability_service_test/BUILD.gn
@@ -119,6 +119,10 @@ ohos_moduletest("specified_ability_service_test") {
       "window_manager:libdm",
     ]
   }
+
+  if (ecologic_rule_enabled) {
+    external_deps += [ "ecological_rule_mgr:erms_client" ]
+  }
 }
 
 group("moduletest") {
