--- a/test/moduletest/on_new_want_module_test/BUILD.gn
+++ b/test/moduletest/on_new_want_module_test/BUILD.gn
@@ -116,6 +116,10 @@ ohos_moduletest("on_new_want_module_test") {
       "window_manager:libdm",
     ]
   }
+
+  if (ecologic_rule_enabled) {
+    external_deps += [ "ecological_rule_mgr:erms_client" ]
+  }
 }
 
 group("moduletest") {
