--- a/test/unittest/ability_manager_service_test/BUILD.gn
+++ b/test/unittest/ability_manager_service_test/BUILD.gn
@@ -97,6 +97,10 @@ ohos_unittest("ability_manager_service_test") {
   if (background_task_mgr_continuous_task_enable) {
     external_deps += [ "background_task_mgr:bgtaskmgr_innerkits" ]
   }
+
+  if (ecologic_rule_enabled) {
+    external_deps += [ "ecological_rule_mgr:erms_client" ]
+  }
 }
 
 group("unittest") {
