--- a/test/unittest/free_install_manager_test/BUILD.gn
+++ b/test/unittest/free_install_manager_test/BUILD.gn
@@ -65,6 +65,10 @@ ohos_unittest("free_install_manager_test") {
     "hilog:libhilog",
     "ipc:ipc_core",
   ]
+
+  if (ecologic_rule_enabled) {
+    external_deps += [ "ecological_rule_mgr:erms_client" ]
+  }
 }
 
 group("unittest") {
