--- a/test/unittest/user_controller_test/BUILD.gn
+++ b/test/unittest/user_controller_test/BUILD.gn
@@ -42,6 +42,10 @@ ohos_unittest("user_controller_test") {
     "ipc:ipc_core",
     "window_manager:scene_session",
   ]
+
+  if (ecologic_rule_enabled) {
+    external_deps += [ "ecological_rule_mgr:erms_client" ]
+  }
 }
 
 group("unittest") {
