--- a/test/unittest/BUILD.gn
+++ b/test/unittest/BUILD.gn
@@ -266,6 +266,10 @@ ohos_source_set("abilityms_test_source") {
     ]
   }
 
+  if (ecologic_rule_enabled) {
+    external_deps += [ "ecological_rule_mgr:erms_client" ]
+  }
+
   subsystem_name = "ability"
   part_name = "ability_runtime"
 }
