--- a/frameworks/js/napi/app/ability_delegator/BUILD.gn
+++ b/frameworks/js/napi/app/ability_delegator/BUILD.gn
@@ -54,6 +54,7 @@ template("delegator") {
       "c_utils:utils",
       "common_event_service:cesfwk_innerkits",
       "hilog:libhilog",
+      "hitrace:hitrace_meter",
       "napi:ace_napi",
     ]
 
